# ros_ws

./: README.md  foo_act_vel_ref_body.txt  foo_tip_act_pos_ref_leg_ori.txt  for.plt  logfile.mtb  pos.plt  robot_postion.txt  robot_velocity.txt  vel.plt
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
logs/grid_map_filters/: build.make.000.log.stderr
logs/grid_map_rviz_plugin/: build.make.000.log.stderr
logs/hexapod_master/: build.make.000.log.stderr  build.make.009.log.stderr
logs/new/: build.cmake.000.log.stderr
logs/traversability_estimation/: build.make.000.log.stderr
logs/traversability_estimation_filters/: build.make.000.log.stderr
src/hexapod_master/: CMakeLists.txt  package.xml
src/hexapod_master/common/estimator/: contact_detection_simple.cpp  contact_detection_simple.h  state_estimator_simple.cpp  state_estimator_simple.h  state_estimator_yxy.cpp  state_estimator_yxy.h  xzb_leg_odometer.cpp  xzb_leg_odometer.h
src/hexapod_master/common/foot_swing_trajectory/: foo_and_bod_adj_and_map.cpp  foo_and_bod_adj_and_map.h  lagrange_interpolator.cpp  lagrange_interpolator.h  neural_bezier_curve.cpp  neural_bezier_curve.h
src/hexapod_master/common/scheduler/: cpg_scheduler.cpp  cpg_scheduler.h  simple_scheduler.cpp  simple_scheduler.h
src/hexapod_master/common/utilities/: bubble_sort.cpp  bubble_sort.h  linear_trans.cpp  linear_trans.h  pid_controller.h  protection.h  timer.h
src/hexapod_master/foothold/: foothold.cpp  foothold_planner.cpp  foothold_planner.h  test_foothold_planner.cpp  test_foothold_planner.h
src/hexapod_master/robot/: main_helper.cpp  main_helper.h
src/hexapod_master/robot/hardware/: PiceCan.cpp  PiceCan.h  hardware_bridge.cpp  hardware_bridge.h  hardware_interface.cpp  hardware_interface.h
src/hexapod_master/robot/hardware/imu/: STRUCT.h  example_mti_receive_data.cpp.txt  imuServer.cpp  imuServer.cpp.txt  imuServer.h  imu_main.cpp  imu_main.h  imu_type.hpp
src/hexapod_master/robot/hardware/imu/xspublic/include/xspublic/: calltracer.h  communicator.h  dataparser.h  devicefactory.h  enumexpandersbase.h  gpsstatus.h  idfetchhelpers.h  iointerface.h  iprotocolhandler.h  journalexception.h  journalfile.h  lastresultmanager.h  mtdevice.h  mtsyncsettings.h  nmea_protocolhandler.h  packeterrorrateestimator.h  packetstamper.h  proxycommunicator.h  replymonitor.h  replyobject.h  rx_tx_log.h  serialinterface.h  streaminterface.h  supportedsyncsettings.h  synclinemk4.h  usbinterface.h  xscallbackplainc.h  xscommon_config.h  xscontrol_def.h  xscontrollerconfig.h  xsdevice_def.h  xsdeviceconfiguration.h  xsdeviceparameter.h  xsdevicestate.h  xsens_generic_matrix.h  xsens_math_throw.h  xsgnssstatus.h  xsiccrepmotionresult.h  xsscanner.h  xsselftestresult.h
src/hexapod_master/robot/robot_master/: as.cpp  robot_controller.cpp  robot_controller.h  robot_kinematic.cpp  robot_kinematic.h  robot_lift_dowm_relex.cpp  robot_lift_dowm_relex.h  robot_main.cpp  robot_main.h  robot_motion.cpp  robot_motion.h  robot_parameter.cpp  robot_parameter.h  robot_runner.cpp  robot_runner.h  robot_utilities.cpp  robot_utilities.h  test.cpp
src/hexapod_master/robot/simulation/: simulation_bridge.cpp  simulation_bridge.h
src/hexapod_master/user/: main.cpp  test.cpp
src/hexapod_master/user/ada_control/: ada_control.cpp  ada_control.h  behavior_net.cpp  behavior_net.h
src/hexapod_master/user/pd/: pd_ctrl.cpp  pd_ctrl.h
src/hexapod_master/user/remote_monitor/: keyboard_ctrl.cpp  keyboard_ctrl.h
src/hexapod_master/user/wbc/: QPForce712.cpp  QPForce712.h  cppTypes.h
src/hexapod_master/xspublic/include/xspublic/: datapacketcache.h  datapoller.h  devicecommunicator.h  enumerateusbdevices.h  enumexpanders.h  iointerfacefile.h  iprotocolmanager.h  journaller.h  messageextractor.h  messageserializer.h  mtbfilecommunicator.h  mtibasedevice.h  rangequeue.h  restorecommunication.h  scanner.h  scenariomatchpred.h  serialcommunicator.h  synclinegmt.h  xsdeviceptrarray.h  xsens_mutex.h  xsicccommand.h
src/hexapod_master/xspublic/xscommon/: CMakeLists.txt  Makefile  cmake_install.cmake  consolelogger.cpp  journaller.cpp  threading.cpp  xsens_threadpool.cpp
src/hexapod_master/xspublic/xscontroller/: CMakeLists.txt  Makefile  broadcastdevice.cpp  callbackmanagerxda.cpp  cmake_install.cmake  communicator.cpp  datapacketcache.cpp  dataparser.cpp  devicecommunicator.cpp  devicefactory.cpp  deviceredetector.cpp  iointerface.cpp  iointerfacefile.cpp  messageextractor.cpp  messageserializer.cpp  mtbfilecommunicator.cpp  mtdevice.cpp  mti3x0device.cpp  mti6x0device.cpp  mti7device.cpp  mti8x0device.cpp  mtibasedevice.cpp  mtigdevice.cpp  mtix00device.cpp  mtix0device.cpp  mtixdevice.cpp  mtthread.cpp  packetstamper.cpp  protocolhandler.cpp  proxycommunicator.cpp  replyobject.cpp  restorecommunication.cpp  scanner.cpp  serialcommunicator.cpp  serialinterface.cpp  serialportcommunicator.cpp  supportedsyncsettings.cpp  udev.cpp  usbinterface.cpp  xsconnectivitystate.c  (+7 more)
src/hexapod_master/xspublic/xstypes/: CMakeLists.txt  Makefile  cmake_install.cmake
src/new/: CMakeLists.txt  package.xml
src/new/config/: Positioncotroller.yaml
src/new/foothold_config/: robot.yaml  simple_demo_map.yaml  simple_demo_robot.yaml
src/new/foothold_launch/: foothold.launch  gazebo1.launch  simple_demo.launch  traversability_estimation.launch
src/new/launch/: PGC.launch  Positioncontroller.launch  TGC.launch  Touquecontroller.launch  display.launch  gazebo.launch  terrian.launch
src/new/meshes/: L1_1.STL  L1_2.STL  L1_3.STL  L2_1.STL  L2_2.STL  L2_3.STL  L3_1.STL  L3_2.STL  L3_3.STL  R1_1.STL  R1_2.STL  R1_3.STL  R2_1.STL  R2_2.STL  R2_3.STL  R3_1.STL  R3_2.STL  R3_3.STL  base_link.STL
src/new/urdf/: new.csv  new.urdf  new_base_footprint.urdf
src/new/words/: alphat plane.world  blocks.world  ground2.world  ground3.world  ground4.world  ground7.world  map1.world  map2.world  wall3.world  wall5.world  wall6.world
src/new/xacro/: gazebo.xacro  new.xacro  robot.xacro  sensor.xacro  transmission.xacro
(+522 files in other folders)
