aux_source_directory(. DIR_LIB_SRCS_COMMON)
# FILE(GLOB_RECURSE headers *.h)
# FILE(GLOB_RECURSE source *.cpp)
# FILE(GLOB_RECURSE header *.hpp)
# FILE(GLOB_RECURSE sources *.c)
# include_directories("../xstypes")
# include_directories("../xscontroller")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/lib)
include_directories("../include")
# add_library(XsCommon ${headers} ${header} ${source} ${sources})
add_library(XsCommon ${DIR_LIB_SRCS_COMMON})