aux_source_directory(. DIR_LIB_SRCS_TYPES)
FILE(GLOB_RECURSE header_ty *.h)
FILE(GLOB_RECURSE headers_ty *.hpp)
FILE(GLOB_RECURSE source_ty *.c)
FILE(GLOB_RECURSE sources_ty *.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/lib)
include_directories("../include")
# add_library(XsTypes ${header_ty} ${headers_ty} ${source_ty} ${sources_ty})
add_library(XsTypes ${DIR_LIB_SRCS_TYPES})